--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
 <meta name="keywords" content="Xianzhi Li, Li Xianzhi, Xianzhi, CSE, CUHK, The Chinese University of Hong Kong, Sichuan University"> 
-<meta name="description" content="Xianzhi Li&#39;s home page">
+<meta name="description" content="Xiaoya Zhai&#39;s home page">
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
@@ -31,8 +31,8 @@
 		<tr>
 			<td width="670">
 				<div id="toptitle">					
-					<h1>Xianzhi Li</h1><h1>
-					<h1>李贤芝</h1><h1>
+					<h1>Xiaoya Zhai</h1><h1>
+					<h1>翟晓雅</h1><h1>
 				</h1></div>
 
 				<h3>Ph.D.</h3>
@@ -60,7 +60,7 @@
 	</tr></tbody>
 </table>
 
-<h2>Biography [<a href="./CV.pdf">CV</a>]</h2>
+<h2>Research interests [<a href="./CV.pdf">CV</a>]</h2>
 <p>
 	I have received my Ph.D. degree from the <a href="http://www.cse.cuhk.edu.hk/">Department of Computer Science and Engineering</a>, <a href="http://www.cuhk.edu.hk/">The Chinese University of Hong Kong (CUHK)</a>, supervised by <a href="http://www.cse.cuhk.edu.hk/~pheng" target="_blank">Prof. Pheng-Ann Heng</a> and <a href="http://www.cse.cuhk.edu.hk/~cwfu" target="_blank">Prof. Chi-Wing Fu</a>. Before that, I received the M.Sc. from Biomedical Engineering at CUHK in 2015 and B. Eng. from Biomedical Engineering at <a href="http://en.scu.edu.cn/">Sichuan University</a> in 2014.
 </p>
