--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 		<tr>
 			<td width="670">
 				<div id="toptitle">					
-					<h1>Xiaoya Zhai</h1><h1>
-					<h1>翟晓雅</h1><h1>
+					<h1>Xiaoya Zhai(翟晓雅)</h1><h1>
+					<h1>11</h1><h1>
 				</h1></div>
 
 				<h3>Ph.D.</h3>
