--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="shortcut icon" href="myIcon.ico">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
-<meta name="keywords" content="Xiaoya Zhai, Li Xianzhi, Xianzhi, CSE, CUHK, The Chinese University of Hong Kong, Sichuan University"> 
+<meta name="keywords" content="Xiaoya Zhai, CSE, CUHK, The Chinese University of Hong Kong, Sichuan University"> 
 <meta name="description" content="Xiaoya Zhai&#39;s home page">
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
@@ -32,15 +32,17 @@
 			<td width="670">
 				<div id="toptitle">					
 					<h1>Xiaoya Zhai(翟晓雅)</h1><h1>
-					<h1>11</h1><h1>
+					<h1>Postdoctoral Fellow, University of Science and Technology of China</h1><h1>
 				</h1></div>
 
 				<h3>Ph.D.</h3>
 				<p>
-					Rm 903, Ho Sin-Hang Engineering Building <br>
-					Dept. of Computer Science and Engineering<br>
-					The Chinese University of Hong Kong <br>
-					Shatin, N.T., Hong Kong<br>
+					Rm 1207, Management and Research Building <br>
+					East Campus, University of Science and Technology of China, Hefei, Anhui, 230026, P.R.China <br>
+					Graphics&Geometric Computing Laboratory <br>
+					Dept. of Computational mathmatictis<br>
+					School of Mathematical Sciences <br>
+					University of Science and Technology of China<br>
 					<br>
 					Email: xzli at cse dot cuhk dot edu dot hk
 				</p>
