--- a/index.html
+++ b/index.html
@@ -32,13 +32,12 @@
 			<td width="670">
 				<div id="toptitle">					
 					<h1>Xiaoya Zhai(翟晓雅)</h1><h1>
-					<h1>Postdoctoral Fellow, University of Science and Technology of China</h1><h1>
+					<h1>University of Science and Technology of China (USTC)</h1><h1>
 				</h1></div>
 
-				<h3>Ph.D.</h3>
+				<h3>Postdoctoral Fellow</h3>
 				<p>
-					Rm 1207, Management and Research Building <br>
-					East Campus, University of Science and Technology of China, Hefei, Anhui, 230026, P.R.China <br>
+					Rm 1412, Management and Research Building,East Campus, USTC <br>
 					Graphics&Geometric Computing Laboratory <br>
 					Dept. of Computational mathmatictis<br>
 					School of Mathematical Sciences <br>
