--- a/index.html
+++ b/index.html
@@ -32,18 +32,17 @@
 			<td width="670">
 				<div id="toptitle">					
 					<h1>Xiaoya Zhai(翟晓雅)</h1><h1>
-					<h1>University of Science and Technology of China (USTC)</h1><h1>
+					<h2>University of Science and Technology of China (USTC)</h2><h2>
 				</h1></div>
 
 				<h3>Postdoctoral Fellow</h3>
 				<p>
-					Rm 1412, Management and Research Building,East Campus, USTC <br>
-					Graphics&Geometric Computing Laboratory <br>
-					Dept. of Computational mathmatictis<br>
+					Rm 1412, Management and Research Building, East Campus, USTC <br>
+					Graphics & Geometric Computing Laboratory <br>
 					School of Mathematical Sciences <br>
 					University of Science and Technology of China<br>
 					<br>
-					Email: xzli at cse dot cuhk dot edu dot hk
+					Email: xiaoya93@mail.ustc.edu.cn
 				</p>
 				<p> <a href="https://scholar.google.com.hk/citations?user=qsJCXFoAAAAJ&hl=en"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://github.com/nini-lxz"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a>
