--- a/index.html
+++ b/index.html
@@ -32,16 +32,14 @@
 			<td width="670">
 				<div id="toptitle">					
 					<h1>Xiaoya Zhai(翟晓雅)</h1><h1>
+					<h1>Postdoctoral Fellow @ USTC</h1>
 				</h1></div>
-					<h2>Postdoctoral Fellow</h2>
-					<h2>University of Science and Technology of China (USTC)</h2><h2>
-				
 				
 				<p>
 					Rm 1412, Management and Research Building, East Campus, USTC <br>
 					Graphics & Geometric Computing Laboratory <br>
 					School of Mathematical Sciences <br>
-					University of Science and Technology of China<br>
+					University of Science and Technology of China (USTC)<br>
 					<br>
 					Email: xiaoya93@mail.ustc.edu.cn
 				</p>
