--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="shortcut icon" href="myIcon.ico">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
-<meta name="keywords" content="Xiaoya Zhai, CSE, CUHK, The Chinese University of Hong Kong, Sichuan University"> 
+<meta name="keywords" content="Xiaoya Zhai, CSE, USTC, University of Science and Technology of China, Sichuan University"> 
 <meta name="description" content="Xiaoya Zhai&#39;s home page">
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
@@ -59,7 +59,7 @@
 	</tr></tbody>
 </table>
 
-<h2>Research interests [<a href="./CV.pdf">CV</a>]</h2>
+<h2>Education [<a href="./CV.pdf">CV</a>]</h2>
 <p>
 	I have received my Ph.D. degree from the <a href="http://www.cse.cuhk.edu.hk/">Department of Computer Science and Engineering</a>, <a href="http://www.cuhk.edu.hk/">The Chinese University of Hong Kong (CUHK)</a>, supervised by <a href="http://www.cse.cuhk.edu.hk/~pheng" target="_blank">Prof. Pheng-Ann Heng</a> and <a href="http://www.cse.cuhk.edu.hk/~cwfu" target="_blank">Prof. Chi-Wing Fu</a>. Before that, I received the M.Sc. from Biomedical Engineering at CUHK in 2015 and B. Eng. from Biomedical Engineering at <a href="http://en.scu.edu.cn/">Sichuan University</a> in 2014.
 </p>
@@ -67,25 +67,22 @@
 <p>My research interests include 3D vision, computer graphics, point cloud processing, and deep learning. </p>
 
 
-<h2>News</h2>
+<h2>Research interests</h2>
 <ul>
 	<li>
-		One paper (Disentangle-PU) was accepted by CVPR 2021.
+		(Differentiable) microstructures design
 	</li>
 	<li>
-		[23/06/2020] Passed the oral defense and became a <b>Dr.</b>!
+		Topology optimization based on stress constraints
 	</li>
 	<li>
-		One paper (deep normal filtering for mesh denoising) was accepted by TVCG.
+		Path planning for additive manufacturing
 	</li>
 	<li>
-		One paper (unsupervised distinctive region detection) was accepted by TOG.
+		Numerical methods/ Numerical optimization
 	</li>
 	<li>
-		One paper (PointAugment) was accepted by CVPR 2020.
-	</li>
-	<li>
-		Two papers (PU-GAN and deep floor plan recognition) were accepted by ICCV 2019.
+		Isogeometric analysis
 	</li>
 </ul>
 
