--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 					<br>
 					Email: xiaoya93@mail.ustc.edu.cn
 				</p>
-				<p> <a href="https://scholar.google.com.hk/citations?user=qsJCXFoAAAAJ&hl=en"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
-					<a href="https://github.com/nini-lxz"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a>
-					<a href="https://www.researchgate.net/profile/Xianzhi_Li2"><img src="./pic/rg.png" height="30px" style="margin-bottom:-3px"></a>
+				<p> <a href="https://scholar.google.com.hk/citations?user=WilK8ngAAAAJ&hl=zh-CN"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
+					<a href="https://github.com/xiaoyazhai"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a>
+					<a href="https://www.researchgate.net/profile/Xiaoya-Zhai"><img src="./pic/rg.png" height="30px" style="margin-bottom:-3px"></a>
 					<!--
 					<a href="https://www.linkedin.com/in/lequan-yu-124811a2"><img src="./pic/LinkedIn_s.png" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://zh-cn.facebook.com/people/Lequan-Yu/100003696557697"><img src="./pic/Facebook_s.png" height="30px" style="margin-bottom:-3px"></a>
@@ -59,12 +59,14 @@
 	</tr></tbody>
 </table>
 
-<h2>Education [<a href="./CV.pdf">CV</a>]</h2>
+<h2>Education <!--[<a href="./CV.pdf">CV</a>]--> </h2>
 <p>
-	I have received my Ph.D. degree from the <a href="http://www.cse.cuhk.edu.hk/">Department of Computer Science and Engineering</a>, <a href="http://www.cuhk.edu.hk/">The Chinese University of Hong Kong (CUHK)</a>, supervised by <a href="http://www.cse.cuhk.edu.hk/~pheng" target="_blank">Prof. Pheng-Ann Heng</a> and <a href="http://www.cse.cuhk.edu.hk/~cwfu" target="_blank">Prof. Chi-Wing Fu</a>. Before that, I received the M.Sc. from Biomedical Engineering at CUHK in 2015 and B. Eng. from Biomedical Engineering at <a href="http://en.scu.edu.cn/">Sichuan University</a> in 2014.
+	I have received my Ph.D. degree from the <a href="http://math.ustc.edu.cn/">School of Mathematical Sciences</a>, <a href="https://www.ustc.edu.cn/">University of Science and Technology of China (USTC)</a>, supervised by <a href="http://staff.ustc.edu.cn/~chenfl/econtact.htm">Prof. Falai Chen</a> and <a href="http://homepage.tudelft.nl/z0s1z/" target="_blank">Dr. Jun Wu</a>. 
+	I was a joint Training Ph.D. Student and went to Delft University of Technology in the Netherlands under the support of China Scholarship Council in 2019.
+	Before that, I received the B.Sc. from Biomedical Engineering at CUHK in 2015 and B. Eng. from college of science at <a href="https://www.neu.edu.cn/">Northeastern University</a> in 2015. 
 </p>
 
-<p>My research interests include 3D vision, computer graphics, point cloud processing, and deep learning. </p>
+<!--<p>My research interests include 3D vision, computer graphics, point cloud processing, and deep learning. </p>-->
 
 
 <h2>Research interests</h2>
@@ -88,7 +90,7 @@
 
 
 
-<h2>Selected Publications [<a href="https://scholar.google.com.hk/citations?user=qsJCXFoAAAAJ&hl=en">Google Scholar</a>]</h2>
+<h2>Selected Publications <!--[<a href="https://scholar.google.com.hk/citations?user=qsJCXFoAAAAJ&hl=en">Google Scholar</a>]--></h2>
 <!--<p><a href="http://scholar.google.com/citations?user=PeMuphgAAAAJ">My Google Scholar</a></p>-->
 <table id="tbPublications" width="100%">
 	<tbody>
