--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <p>
 	I have received my Ph.D. degree from the <a href="http://math.ustc.edu.cn/">School of Mathematical Sciences</a>, <a href="https://www.ustc.edu.cn/">University of Science and Technology of China (USTC)</a>, supervised by <a href="http://staff.ustc.edu.cn/~chenfl/econtact.htm">Prof. Falai Chen</a> and <a href="http://homepage.tudelft.nl/z0s1z/" target="_blank">Dr. Jun Wu</a>. 
 	I was a joint Training Ph.D. Student and went to Delft University of Technology in the Netherlands under the support of China Scholarship Council in 2019.
-	Before that, I received the B.Sc. from Biomedical Engineering at CUHK in 2015 and B. Eng. from college of science at <a href="https://www.neu.edu.cn/">Northeastern University</a> in 2015. 
+	Before that, I received the B.Sc. from college of science at <a href="https://www.neu.edu.cn/">Northeastern University</a> in 2015. 
 </p>
 
 <!--<p>My research interests include 3D vision, computer graphics, point cloud processing, and deep learning. </p>-->
@@ -128,107 +128,13 @@
 
 	<tr>
 		<td width="270">
-		<img src="./indexpics/distinction.png" width="260px" style="box-shadow: 4px 4px 8px #888">
+		<img src="./indexpics/fractal.png" width="260px" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> Unsupervised Detection of Distinctive Regions on 3D Shapes. <br>
-		<b>Xianzhi Li</b>, Lequan Yu, Chi-Wing Fu, Daniel Cohen-Or, Pheng-Ann Heng. <br>
-		<em>ACM Transactions on Graphics</em> (<i><b>TOG</b></i>), 2020.
+		<td> 3D Printing Path Planning of Fractal Models. <br>
+		<b>Xiaoya Zhai</b>, Falai Chen*. <br>
+		<em>Journal of Computer-Aided Design and Computer Graphics </em>, 2019.
 		<p></p>
-		<p>[<a href="https://arxiv.org/abs/1905.01684">paper</a>][<a href="https://github.com/nini-lxz/Unsupervised-Shape-Distinction-Detection" target="_blank">code</a>]</p>
-		</td>
-	</tr>
-	<tr>&nbsp</tr>
-    <tr>&nbsp</tr>
-    <tr>&nbsp</tr>
-
-	<tr>
-		<td width="270">
-		<img src="./indexpics/pointaug.png" width="260px" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> PointAugment: an Auto-Augmentation Framework for Point Cloud Classification. <br>
-		Ruihui Li, <b>Xianzhi Li</b>, Pheng-Ann Heng, Chi-Wing Fu. <br>
-		<em>IEEE Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2020. (<i><b>oral</b></i>)
-		<p></p>
-		<p>[<a href="http://openaccess.thecvf.com/content_CVPR_2020/html/Li_PointAugment_An_Auto-Augmentation_Framework_for_Point_Cloud_Classification_CVPR_2020_paper.html">paper</a>][<a href="https://github.com/liruihui/PointAugment/" target="_blank">code</a>]</p>
-		</td>
-	</tr>
-	<tr>&nbsp</tr>
-    <tr>&nbsp</tr>
-    <tr>&nbsp</tr>
-
-	<tr>
-		<td width="270">
-		<img src="./indexpics/pu-gan.png" width="260px" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> PU-GAN: a Point Cloud Upsampling Adversarial Network. <br>
-		Ruihui Li, <b>Xianzhi Li</b>, Chi-Wing Fu, Daniel Cohen-Or, Pheng-Ann Heng. <br>
-		<em>IEEE International Conference on Computer Vision</em> (<i><b>ICCV</b></i>), 2019.
-		<p></p>
-		<p>[<a href="https://liruihui.github.io/publication/PU-GAN/">project page</a>][<a href="https://github.com/liruihui/PU-GAN" target="_blank">code</a>]</p>
-		</td>
-	</tr>
-	<tr>&nbsp</tr>
-    <tr>&nbsp</tr>
-    <tr>&nbsp</tr>
-
-	<tr>
-		<td width="270">
-		<img src="./indexpics/floor-plan.png" width="260px" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> Deep Floor Plan Recognition using a Multi-task Network with Room-boundary-Guided Attention. <br>
-		Zhiliang Zeng, <b>Xianzhi Li</b>, Chi-Wing Fu, Ying-Kin Yu. <br>
-		<em>IEEE International Conference on Computer Vision</em> (<i><b>ICCV</b></i>), 2019.
-		<p></p>
-		<p>[<a href="https://github.com/zlzeng/DeepFloorplan" target="_blank">paper</a>][<a href="https://github.com/zlzeng/DeepFloorplan" target="_blank">code</a>]</p>
-		</td>
-	</tr>
-	<tr>&nbsp</tr>
-    <tr>&nbsp</tr>
-    <tr>&nbsp</tr>
-
-	<tr>
-		<td width="270">
-		<img src="indexpics/nllr.png" width="260px" style="box-shadow: 4px 4px 8px #888">
-		</td>
-		<td>Non-local Low-rank Normal Filteirng for Mesh Denoising. <br>
-		<b>Xianzhi Li</b>, Lei Zhu, Chi-Wing Fu, Pheng-Ann Heng<br>
-		<em> Computer Graphics Forum </em> (<i><b>Pacific Graphics</b></i>), 2018.
-		<p></p>
-		<p>[<a href="https://onlinelibrary.wiley.com/doi/pdf/10.1111/cgf.13556" target="_blank">paper</a>][<a href="https://github.com/nini-lxz/NLLR" target="_blank">code</a>]</p>
-		</td>
-	</tr>
-	<tr>&nbsp</tr>
-    <tr>&nbsp</tr>
-    <tr>&nbsp</tr>
-
-
-	<tr>
-		<td width="270">
-		<img src="./indexpics/ec-net.png" width="260px" style="box-shadow: 4px 4px 8px #888">
-		</td>
-		<td> EC-Net: and Edge-aware Point Set Consolidation Network. <br>
-		Lequan Yu*, <b>Xianzhi Li</b>*, Chi-Wing Fu, Daniel Cohen-Or, Pheng-Ann Heng. <br>
-		<em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.
-		<p>(* Joint first author)</p>
-		<p></p>
-		<p>[<a href="https://arxiv.org/abs/1807.06010" target="_blank">paper</a>] [<a href="https://yulequan.github.io/ec-net/" target="_blank">project page</a>]</p>
-		</td>
-	</tr>
-	<tr>&nbsp</tr>
-    <tr>&nbsp</tr>
-    <tr>&nbsp</tr>
-
-
-	<tr>
-		<td width="270">
-		<img src="./indexpics/pu-net.png" width="260px" style="box-shadow: 4px 4px 8px #888">
-		</td>
-		<td> PU-Net: Point Cloud Upsampling Network. <br>
-		Lequan Yu*, <b>Xianzhi Li</b>*, Chi-Wing Fu, Daniel Cohen-Or, Pheng-Ann Heng. <br>
-		<em>IEEE Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2018.
-		<p>(* Joint first author)</p>
-		<p></p>
-		<p>[<a href="https://arxiv.org/abs/1801.06761" target="_blank">paper</a>] [<a href="https://github.com/yulequan/PU-Net" target="_blank">code</a>]</p>
+		<p>[<a href="https://www.researchgate.net/publication/326114553_3D_Printing_Path_Planning_of_Fractal_Models">paper</a>]</p>
 		</td>
 	</tr>
 	<tr>&nbsp</tr>
@@ -364,7 +270,7 @@
       		<noscript><a href='https://clustrmaps.com/site/1aa2l'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=tt&d=UexA6kPrFZuJeB69B5BZyS063R_EhdDx6FAwAYiub2U&co=2d78ad&ct=ffffff'/></a></noscript> -->
 	</div>        
 	<br>
-        &copy; Xianzhi Li | Last updated: July 2019
+        &copy; Xiaoya Zhai | Last updated: June 2021
      
       </center></p>
 
