--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
 
 	<tr>
 		<td width="270">
-		<img src="./indexpics/dnf.png" width="260px" style="box-shadow: 4px 4px 8px #888">
+		<img src="./indexpics/path_porous.png" width="260px" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> DNF-Net: a Deep Normal Filtering Network for Mesh Denoising. <br>
-		<b>Xianzhi Li</b>, Ruihui Li, Lei Zhu, Chi-Wing Fu, Pheng-Ann Heng. <br>
-		<em>IEEE Transactions on Visualization and Computer Graphics</em> (<i><b>TVCG</b></i>), 2020.
+		<td> Path Planning of A Type of Porous Structures for Additive Manufacturing. <br>
+		<b>Xiaoya Zhai</b>, Falai Chen*. <br>
+		<em>Computer-Aided Design</em>, 2019.
 		<p></p>
-		<p>[<a href="https://ieeexplore.ieee.org/document/9115285">paper</a>][<a href="https://github.com/nini-lxz/DNF-Net" target="_blank">code</a>]</p>
+		<p>[<a href="https://www.sciencedirect.com/science/article/pii/S0010448518305293?casa_token=x4O3EqLd-bsAAAAA:aosv5BZ_11h4ITTPo1t3tl9Xlr57yJE7gv5uY8KdQESMxVG8_TRb4oAs3YCMNaYO2fLyh1cVn7HY">paper</a>]<!--[<a href="https://github.com/nini-lxz/DNF-Net" target="_blank">code</a>]--></p>
 		</td>
 	</tr>
 	<tr>&nbsp</tr>
@@ -132,7 +132,7 @@
 		</td>		
 		<td> 3D Printing Path Planning of Fractal Models. <br>
 		<b>Xiaoya Zhai</b>, Falai Chen*. <br>
-		<em>Journal of Computer-Aided Design and Computer Graphics </em>, 2019.
+		<em>Journal of Computer-Aided Design and Computer Graphics </em>, 2018.
 		<p></p>
 		<p>[<a href="https://www.researchgate.net/publication/326114553_3D_Printing_Path_Planning_of_Fractal_Models">paper</a>]</p>
 		</td>
