--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
 
 	<tr>
 		<td width="270">
-		<img src="./indexpics/scan.png" width="260px" style="box-shadow: 4px 4px 8px #888">
+		<img src="./indexpics/stress_admm.png" width="260px" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> Point Cloud Upsampling via Disentangled Refinement. <br>
-		Ruihui Li, <b>Xianzhi Li</b>*,  Pheng-Ann Heng, Chi-Wing Fu. <br>
-		<em>IEEE Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2021.
+		<td> Alternating Optimization of Design and Stress for Stress-Constrained Topology Optimization. <br>
+		<b>Xiaoya Zhai</b>, Falai Chen, Jun Wu*. <br>
+		<em>Structural and Multidisciplinary Optimization</em> , 2021.
 		<p>(* Corresponding author)</p>
 		<p></p>
-		<p>[paper][code]</p>
+		<p>[paper]</p>
 		</td>
 	</tr>
 	<tr>&nbsp</tr>
@@ -117,6 +117,7 @@
 		</td>		
 		<td> Path Planning of A Type of Porous Structures for Additive Manufacturing. <br>
 		<b>Xiaoya Zhai</b>, Falai Chen*. <br>
+		<p>(* Corresponding author)</p>
 		<em>Computer-Aided Design</em>, 2019.
 		<p></p>
 		<p>[<a href="https://www.sciencedirect.com/science/article/pii/S0010448518305293?casa_token=x4O3EqLd-bsAAAAA:aosv5BZ_11h4ITTPo1t3tl9Xlr57yJE7gv5uY8KdQESMxVG8_TRb4oAs3YCMNaYO2fLyh1cVn7HY">paper</a>]<!--[<a href="https://github.com/nini-lxz/DNF-Net" target="_blank">code</a>]--></p>
@@ -132,6 +133,7 @@
 		</td>		
 		<td> 3D Printing Path Planning of Fractal Models. <br>
 		<b>Xiaoya Zhai</b>, Falai Chen*. <br>
+		<p>(* Corresponding author)</p>			
 		<em>Journal of Computer-Aided Design and Computer Graphics </em>, 2018.
 		<p></p>
 		<p>[<a href="https://www.researchgate.net/publication/326114553_3D_Printing_Path_Planning_of_Fractal_Models">paper</a>]</p>
