--- a/index.html
+++ b/index.html
@@ -95,6 +95,21 @@
 <table id="tbPublications" width="100%">
 	<tbody>
 
+	<tr>
+		<td width="270">
+		<img src="./indexpics/TO_Differentiable.png" width="260px" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> Topology Optimization of Differentiable Microstructures. <br>
+		<b>Xiaoya Zhai</b>, Weiming Wang, Falai Chen, Jun Wu*. <br>
+		<em>submitted
+		<p>(* Corresponding author)</p>
+		<p></p>
+		<p>[paper]</p>
+		</td>
+	</tr>
+	<tr>&nbsp</tr>
+    <tr>&nbsp</tr>
+    <tr>&nbsp</tr>
 	
 	<tr>
 		<td width="270">
@@ -102,7 +117,7 @@
 		</td>		
 		<td> Topology Optimization of Differentiable Microstructures. <br>
 		<b>Xiaoya Zhai</b>, Weiming Wang, Falai Chen, Jun Wu*. <br>
-		<em>submitted to Computer Methods in Applied Mechanics and Engineering
+		<em>submitted
 		<p>(* Corresponding author)</p>
 		<p></p>
 		<p>[paper]</p>
