--- a/index.html
+++ b/index.html
@@ -95,23 +95,8 @@
 <table id="tbPublications" width="100%">
 	<tbody>
 
-	<tr>
-		<td width="270">
-		<img src="./indexpics/TO_Differentiable.png" width="260px" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> Topology Optimization of Differentiable Microstructures. <br>
-		<b>Xiaoya Zhai</b>, Weiming Wang, Falai Chen, Jun Wu*. <br>
-		<em>submitted
-		<p>(* Corresponding author)</p>
-		<p></p>
-		<p>[paper]</p>
-		</td>
-	</tr>
-	<tr>&nbsp</tr>
-    <tr>&nbsp</tr>
-    <tr>&nbsp</tr>
 	
-	<tr>
+	<!--<tr>
 		<td width="270">
 		<img src="./indexpics/TO_Differentiable.png" width="260px" style="box-shadow: 4px 4px 8px #888">
 		</td>		
@@ -125,8 +110,23 @@
 	</tr>
 	<tr>&nbsp</tr>
     <tr>&nbsp</tr>
-    <tr>&nbsp</tr>
+    <tr>&nbsp</tr>-->
 		
+	<tr>
+		<td width="270">
+		<img src="./indexpics/TO_Differentiable.png" width="260px" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> Topology Optimization of Differentiable Microstructures. <br>
+		<b>Xiaoya Zhai</b>, Weiming Wang, Falai Chen, Jun Wu*. <br>
+		<em>Presented in 14th WCSMO
+		<p>(* Corresponding author)</p>
+		<p></p>
+		<p>[paper]</p>
+		</td>
+	</tr>
+	<tr>&nbsp</tr>
+       	<tr>&nbsp</tr>
+    	<tr>&nbsp</tr>
 		
 	<tr>
 		<td width="270">
@@ -204,28 +204,25 @@
 <table style="border-spacing:2px">
 	
 		<tbody>
-		<tr><td> Teaching Assistant of Merit, 2018</td></tr>
-		<tr><td> Biomedical Engineering Scholarship, 2015</td></tr>
-		<tr><td> Outstanding Graduates of Sichuan University, 2014</td></tr>
-    	<tr><td> National Scholarship in China, 2013</td></tr>
+		<tr><td> National Scholarship in China, 2017/2014</td></tr>
+		<tr><td> Ph. D. Dissertation Excellence Program, 2020</td></tr>
+		<tr><td> Outstanding Graduates of USTC, 2021</td></tr>
+    		<tr><td> Meritorious Winner of MCM/ICM, 2014</td></tr>
 	</tbody>
 </table>
 
  
-<h2>Teaching</h2>
+<h2>Presentations</h2>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td> 2018-2019</td><td>Spring</S></td><td>CSCI 5210 Advanced Topics in Computer Graphics and Visualization</td>
+			<td> 2021</td><td>Topology optimization of differentiable microstructures</S></td><td>14th World Congress of Structural and Multidisciplinary Optimization.</td>
 		</tr>
 		<tr>
-			<td> 2017-2018</td><td>Fall</td><td>CSCI3260 Principles of Computer Graphics</td>
+			<td> 2020</td> <td>Alternating Optimization of Design and Stress for Stress-Constrained Topology Optimization.</td> <td>Solid and Physical Modeling (SPM) 2020.</td>
 		</tr>
         	<tr>
-			<td> 2017-2018</td><td>Spring</td><td>CSCI2100 Data Structure</td>
-		</tr>
-		<tr>
-			<td> 2016-2017</td><td>Fall</td><td>CSCI3260 Principles of Computer Graphics</td>
+			<td> 2018</td><td>3D Printing Path Planning of Fractal Models.</td><td>National Conference on Geometric Design and Computation 2018.</td>
 		</tr>
 	</tbody>
 </table>
