--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				</p>
 			</td>
 			<td>
-				<img src="./pic/xiaoya.png" border="0" width="200"><br>
+				<img src="./pic/xiaoya.jpg" border="0" width="200"><br>
 			</td>
 		</tr><tr>
 	</tr></tbody>
