--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
   ga('create', 'UA-87320911-1', 'auto');
   ga('send', 'pageview');
-
+  <meta name="google-site-verification" content="gX0A9v9FMnhGO_AlZMQdVHrogcF5XpqJvLDkC0UASFY" />
+	
 </script>
 </head>
 <body>
