--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
 	<tr>
 	<td width="270">
-	<img src="./indexpics/fractal.png" width="260px" style="box-shadow: 4px 4px 8px #888">
+	<img src="./indexpics/chen_energy.png" width="260px" style="box-shadow: 4px 4px 8px #888">
 	</td>		
 	<td>Dynamic Wind Turbine Wake Reconstruction: A Koopman-linear Flow Estimator. <br>
 	Zhenyu Chen, Zhongwei Lin*, <b>Xiaoya Zhai</b>. <br>
