--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 	<p>(* Corresponding author)</p>			
 	<em> Energy </em>, 2021.
 	<p></p>
-	<p>paper</p>
+	<p>[paper]</p>
 	</td>
 	</tr>
 	<tr>&nbsp</tr>
