--- a/index.html
+++ b/index.html
@@ -97,22 +97,6 @@
 	<tbody>
 
 	
-	<!--<tr>
-		<td width="270">
-		<img src="./indexpics/TO_Differentiable.png" width="260px" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> Topology Optimization of Differentiable Microstructures. <br>
-		<b>Xiaoya Zhai</b>, Weiming Wang, Falai Chen, Jun Wu*. <br>
-		<em>submitted
-		<p>(* Corresponding author)</p>
-		<p></p>
-		<p>[paper]</p>
-		</td>
-	</tr>
-	<tr>&nbsp</tr>
-    <tr>&nbsp</tr>
-    <tr>&nbsp</tr>-->
-		
 	<tr>
 		<td width="270">
 		<img src="./indexpics/TO_Differentiable.png" width="260px" style="box-shadow: 4px 4px 8px #888">
@@ -120,7 +104,21 @@
 		<td> Topology Optimization of Differentiable Microstructures. <br>
 		<b>Xiaoya Zhai</b>, Weiming Wang, Falai Chen, Jun Wu*. <br>
 		<em>Presented in 14th WCSMO
-		<p>(* Corresponding author)</p>
+		<p></p>
+		<p>[paper]</p>
+		</td>
+	</tr>
+	<tr>&nbsp</tr>
+        <tr>&nbsp</tr>
+        <tr>&nbsp</tr>
+		
+	<tr>
+		<td width="270">
+		<img src="./indexpics/IGA_TO_Stress.png" width="260px" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> Alternating Optimization Method for Isogeometric Topology Optimization with Stress Constraints. <br>
+		<b>Xiaoya Zhai</b> <br>
+		<em>Journal of Computational Mathematics, under review</em> , 2021.
 		<p></p>
 		<p>[paper]</p>
 		</td>
@@ -136,21 +134,20 @@
 		<td> Alternating Optimization of Design and Stress for Stress-Constrained Topology Optimization. <br>
 		<b>Xiaoya Zhai</b>, Falai Chen, Jun Wu*. <br>
 		<em>Structural and Multidisciplinary Optimization</em> , 2021.
-		<p>(* Corresponding author)</p>
 		<p></p>
 		<p>[<a href="https://link.springer.com/content/pdf/10.1007/s00158-021-02985-1.pdf">paper</a>]</p>
 		</td>
 	</tr>
 	<tr>&nbsp</tr>
-    <tr>&nbsp</tr>
-    <tr>&nbsp</tr>
+        <tr>&nbsp</tr>
+        <tr>&nbsp</tr>
+		
 	<tr>
 		<td width="270">
 		<img src="./indexpics/path_porous.png" width="260px" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> Path Planning of A Type of Porous Structures for Additive Manufacturing. <br>
 		<b>Xiaoya Zhai</b>, Falai Chen*. <br>
-		<p>(* Corresponding author)</p>
 		<em>Computer-Aided Design</em>, 2019.
 		<p></p>
 		<p>[<a href="https://www.sciencedirect.com/science/article/pii/S0010448518305293?casa_token=x4O3EqLd-bsAAAAA:aosv5BZ_11h4ITTPo1t3tl9Xlr57yJE7gv5uY8KdQESMxVG8_TRb4oAs3YCMNaYO2fLyh1cVn7HY">paper</a>]<!--[<a href="https://github.com/nini-lxz/DNF-Net" target="_blank">code</a>]--></p>
@@ -165,8 +162,7 @@
 		<img src="./indexpics/fractal.png" width="260px" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> 3D Printing Path Planning of Fractal Models. <br>
-		<b>Xiaoya Zhai</b>, Falai Chen*. <br>
-		<p>(* Corresponding author)</p>			
+		<b>Xiaoya Zhai</b>, Falai Chen*. <br>	
 		<em>Journal of Computer-Aided Design and Computer Graphics </em>, 2018.
 		<p></p>
 		<p>[<a href="https://www.researchgate.net/publication/326114553_3D_Printing_Path_Planning_of_Fractal_Models">paper</a>]</p>
@@ -181,8 +177,7 @@
 	<img src="./indexpics/chen_energy.png" width="260px" style="box-shadow: 4px 4px 8px #888">
 	</td>		
 	<td>Dynamic Wind Turbine Wake Reconstruction: A Koopman-linear Flow Estimator. <br>
-	Zhenyu Chen, Zhongwei Lin*, <b>Xiaoya Zhai</b>. <br>
-	<p>(* Corresponding author)</p>			
+	Zhenyu Chen, Zhongwei Lin*, <b>Xiaoya Zhai</b>. <br>	
 	<em> Energy </em>, 2021.
 	<p></p>
 	<p>[<a href="https://www.sciencedirect.com/science/article/pii/S036054422101971X?casa_token=SGSsuoRqZUIAAAAA:hL45YEiI8r39ql43CEbydAiFD3CLviOC3l6vpiJQmaMQmDAiroOLA0oUQdeeZseDaeVXn63bFG5S">paper</a>]</p>
