--- a/index.html
+++ b/index.html
@@ -95,7 +95,22 @@
 <!--<p><a href="http://scholar.google.com/citations?user=PeMuphgAAAAJ">My Google Scholar</a></p>-->
 <table id="tbPublications" width="100%">
 	<tbody>
-
+        
+	<!-->
+	<tr>
+		<td width="270">
+		<img src="./indexpics/worst_no_boundary.png" width="260px" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> Worst-case Topology Optimization without Boundary Conditions. <br>
+		<b> Di Zhang, Xiaoming Fu, Xiaoya Zhai</b>, Ligang Liu*. <br>
+		<em> ACM Transactions on Graphics, submit</em> , 2021.
+		<p></p>
+		<p>[paper]</p>
+		</td>
+	</tr>
+	<tr>&nbsp</tr>
+        <tr>&nbsp</tr>
+        <tr>&nbsp</tr>
 	
 	<tr>
 		<td width="270">
@@ -154,8 +169,8 @@
 		</td>
 	</tr>
 	<tr>&nbsp</tr>
-    <tr>&nbsp</tr>
-    <tr>&nbsp</tr>
+        <tr>&nbsp</tr>
+        <tr>&nbsp</tr>
 
 	<tr>
 		<td width="270">
