--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 		</td>		
 		<td> Worst-case Topology Optimization without Boundary Conditions. <br>
 		<b> Di Zhang, Xiaoming Fu, Xiaoya Zhai</b>, Ligang Liu*. <br>
-		<em> ACM Transactions on Graphics, submit</em> , 2021.
+		<em> ACM Transactions on Graphics, submitted</em> , 2021.
 		<p></p>
 		<p>[paper]</p>
 		</td>
@@ -117,6 +117,7 @@
 		<img src="./indexpics/TO_Differentiable.png" width="260px" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> Topology Optimization of Differentiable Microstructures. <br>
+		<p></p>
 		<b>Xiaoya Zhai</b>, Weiming Wang, Falai Chen, Jun Wu*. <br>
 		<em>Presented in 14th WCSMO
 		<p></p>
@@ -132,6 +133,7 @@
 		<img src="./indexpics/IGA_TO_Stress.png" width="260px" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> Alternating Optimization Method for Isogeometric Topology Optimization with Stress Constraints. <br>
+		<p></p>
 		<b>Xiaoya Zhai</b> <br>
 		<em>Journal of Computational Mathematics, under review</em> , 2021.
 		<p></p>
@@ -147,6 +149,7 @@
 		<img src="./indexpics/stress_admm.png" width="260px" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> Alternating Optimization of Design and Stress for Stress-Constrained Topology Optimization. <br>
+		<p></p>
 		<b>Xiaoya Zhai</b>, Falai Chen, Jun Wu*. <br>
 		<em>Structural and Multidisciplinary Optimization</em> , 2021.
 		<p></p>
@@ -162,6 +165,7 @@
 		<img src="./indexpics/path_porous.png" width="260px" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> Path Planning of A Type of Porous Structures for Additive Manufacturing. <br>
+		<p></p>
 		<b>Xiaoya Zhai</b>, Falai Chen*. <br>
 		<em>Computer-Aided Design</em>, 2019.
 		<p></p>
@@ -177,6 +181,7 @@
 		<img src="./indexpics/fractal.png" width="260px" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> 3D Printing Path Planning of Fractal Models. <br>
+		<p></p>
 		<b>Xiaoya Zhai</b>, Falai Chen*. <br>	
 		<em>Journal of Computer-Aided Design and Computer Graphics </em>, 2018.
 		<p></p>
@@ -192,6 +197,7 @@
 	<img src="./indexpics/chen_energy.png" width="260px" style="box-shadow: 4px 4px 8px #888">
 	</td>		
 	<td>Dynamic Wind Turbine Wake Reconstruction: A Koopman-linear Flow Estimator. <br>
+	<p></p>
 	Zhenyu Chen, Zhongwei Lin*, <b>Xiaoya Zhai</b>. <br>	
 	<em> Energy </em>, 2021.
 	<p></p>
