--- a/index.html
+++ b/index.html
@@ -102,9 +102,10 @@
 		<img src="./indexpics/worst_no_boundary.png" width="260px" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> Worst-case Topology Optimization without Boundary Conditions. <br>
-		<b> Di Zhang, Xiaoming Fu, Xiaoya Zhai</b>, Ligang Liu*. <br>
+		<p>  </p>
+		Di Zhang, Xiaoming Fu, <b> Xiaoya Zhai</b>, Ligang Liu*. <br>
 		<em> ACM Transactions on Graphics, submitted</em> , 2021.
-		<p></p>
+		<p>  </p>
 		<p>[paper]</p>
 		</td>
 	</tr>
@@ -117,7 +118,7 @@
 		<img src="./indexpics/TO_Differentiable.png" width="260px" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> Topology Optimization of Differentiable Microstructures. <br>
-		<p></p>
+		<p>  </p>
 		<b>Xiaoya Zhai</b>, Weiming Wang, Falai Chen, Jun Wu*. <br>
 		<em>Presented in 14th WCSMO
 		<p></p>
