--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 		<td> Worst-case Topology Optimization without Boundary Conditions. <br>
 		<p>  </p>
 		Di Zhang, Xiaoming Fu, <b> Xiaoya Zhai</b>, Ligang Liu*. <br>
-		<em> ACM Transactions on Graphics, submitted</em> , 2021.
+		<em> ACM Transactions on Graphics, submitted</em>, 2021.
 		<p>  </p>
 		<p>[paper]</p>
 		</td>
@@ -120,7 +120,8 @@
 		<td> Topology Optimization of Differentiable Microstructures. <br>
 		<p>  </p>
 		<b>Xiaoya Zhai</b>, Weiming Wang, Falai Chen, Jun Wu*. <br>
-		<em>Presented in 14th WCSMO
+		<em> Computer Methods in Applied Mechanics and Engineering, submitted</em>, 2021.
+		<em>Presented in 14th WCSMO, 2021
 		<p></p>
 		<p>[paper]</p>
 		</td>
