--- a/index.html
+++ b/index.html
@@ -121,8 +121,9 @@
 		<p>  </p>
 		<b>Xiaoya Zhai</b>, Weiming Wang, Falai Chen, Jun Wu*. <br>
 		<em> Computer Methods in Applied Mechanics and Engineering, submitted</em>, 2021.
-		<em>Presented in 14th WCSMO, 2021
-		<p></p>
+
+		<td> <em>Presented in 14th WCSMO, 2021 <br>
+		<p> </p>
 		<p>[paper]</p>
 		</td>
 	</tr>
