--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 		<td> Worst-case Topology Optimization without Boundary Conditions. <br>
 		<p>  </p>
 		Di Zhang, Xiaoming Fu, <b> Xiaoya Zhai</b>, Ligang Liu*. <br>
-		<em> ACM Transactions on Graphics, submitted</em>, 2021.
+		<em> ACM Transactions on Graphics, submitted, 2021.</em>
 		<p>  </p>
 		<p>[paper]</p>
 		</td>
@@ -120,9 +120,9 @@
 		<td> Topology Optimization of Differentiable Microstructures. <br>
 		<p>  </p>
 		<b>Xiaoya Zhai</b>, Weiming Wang, Falai Chen, Jun Wu*. <br>
-		<em> Computer Methods in Applied Mechanics and Engineering, submitted</em>, 2021.
-
-		<td> <em>Presented in 14th WCSMO, 2021 <br>
+		<em> Computer Methods in Applied Mechanics and Engineering, submitted, 2021.</em>
+		<p>  </p>
+		<em> <em>Presented in 14th WCSMO, 2021 </em>
 		<p> </p>
 		<p>[paper]</p>
 		</td>
