--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 		<b>Xiaoya Zhai</b>, Weiming Wang, Falai Chen, Jun Wu*. <br>
 		<em> Computer Methods in Applied Mechanics and Engineering, submitted, 2021.</em>
 		<p>  </p>
-		<em> <em>Presented in 14th WCSMO, 2021 </em>
+		<em> Presented in 14th WCSMO, 2021 </em>
 		<p> </p>
 		<p>[paper]</p>
 		</td>
@@ -164,6 +164,23 @@
         <tr>&nbsp</tr>
 		
 	<tr>
+	<td width="270">
+	<img src="./indexpics/chen_energy.png" width="260px" style="box-shadow: 4px 4px 8px #888">
+	</td>		
+	<td>Dynamic Wind Turbine Wake Reconstruction: A Koopman-linear Flow Estimator. <br>
+	<p></p>
+	Zhenyu Chen, Zhongwei Lin*, <b>Xiaoya Zhai</b>. <br>	
+	<em> Energy </em>, 2021.
+	<p></p>
+	<p>[<a href="https://www.sciencedirect.com/science/article/pii/S036054422101971X?casa_token=SGSsuoRqZUIAAAAA:hL45YEiI8r39ql43CEbydAiFD3CLviOC3l6vpiJQmaMQmDAiroOLA0oUQdeeZseDaeVXn63bFG5S">paper</a>]</p>
+	</td>
+	</tr>
+	<tr>&nbsp</tr>
+        <tr>&nbsp</tr>
+        <tr>&nbsp</tr>
+
+
+	<tr>
 		<td width="270">
 		<img src="./indexpics/path_porous.png" width="260px" style="box-shadow: 4px 4px 8px #888">
 		</td>		
@@ -194,23 +211,7 @@
 	<tr>&nbsp</tr>
     <tr>&nbsp</tr>
     <tr>&nbsp</tr>
-
-	<tr>
-	<td width="270">
-	<img src="./indexpics/chen_energy.png" width="260px" style="box-shadow: 4px 4px 8px #888">
-	</td>		
-	<td>Dynamic Wind Turbine Wake Reconstruction: A Koopman-linear Flow Estimator. <br>
-	<p></p>
-	Zhenyu Chen, Zhongwei Lin*, <b>Xiaoya Zhai</b>. <br>	
-	<em> Energy </em>, 2021.
-	<p></p>
-	<p>[<a href="https://www.sciencedirect.com/science/article/pii/S036054422101971X?casa_token=SGSsuoRqZUIAAAAA:hL45YEiI8r39ql43CEbydAiFD3CLviOC3l6vpiJQmaMQmDAiroOLA0oUQdeeZseDaeVXn63bFG5S">paper</a>]</p>
-	</td>
-	</tr>
-	<tr>&nbsp</tr>
-    <tr>&nbsp</tr>
-    <tr>&nbsp</tr>
-
+	
 </tbody></table>
 
 <!--
