--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <table id="tbPublications" width="100%">
 	<tbody>
         
-	<tr>
+	<!--<tr>
 		<td width="270">
 		<img src="./indexpics/worst_no_boundary.png" width="260px" style="box-shadow: 4px 4px 8px #888">
 		</td>		
@@ -110,7 +110,7 @@
 	</tr>
 	<tr>&nbsp</tr>
         <tr>&nbsp</tr>
-        <tr>&nbsp</tr>
+        <tr>&nbsp</tr>->
 	
 	<tr>
 		<td width="270">
@@ -119,7 +119,7 @@
 		<td> Topology Optimization of Differentiable Microstructures. <br>
 		<p>  </p>
 		<b>Xiaoya Zhai</b>, Weiming Wang, Falai Chen, Jun Wu*. <br>
-		<em> Computer Methods in Applied Mechanics and Engineering, submitted, 2021.</em>
+		<!--<em> Computer Methods in Applied Mechanics and Engineering, submitted, 2021.</em>->
 		<p>  </p>
 		<em> Presented in 14th WCSMO, 2021 </em>
 		<p> </p>
@@ -216,19 +216,16 @@
 <h2>Experience</h2>
 <ul>
 	<li>
-		<div style="float:left; text-align:left">NVIDA, deep learning for medical imaging research group, Bethesda, Maryland, USA</div> <div style="float:right; text-align:right">Jul. 2018 – Oct. 2018</div><br>
-		Applied Research Intern<br>
-		Topic: Few-shot medical image segmentation<br>
+		<div style="float:left; text-align:left">Graphics & Geometric Computing Laboratory, School of Mathematical Sciences, University of Science and Technology of China 
+		</div> <div style="float:right; text-align:right">Jul. 2015 – May. 2021</div><br>
+		PhD student<br>
+		Topic: Structural Design and Path Planning in Additive Manufacturing<br>
 	</li>
 	<li>
-		<div style="float:left; text-align:left">Siemens Healthineers, Princeton, New Jersey, USA</div> <div style="float:right; text-align:right">Mar. 2017 – Jul. 2017</div><br>
+		<div style="float:left; text-align:left">Department of Sustainable Design Engineering, Delft University of Technology, Delft, The Netherlands</div>
+		<div style="float:right; text-align:right">Sep. 2019 – Mar. 2021</div><br>
 		Research Intern<br>
-		Topic: Body landmark detection via deep reinforcement learning<br>
-	</li>
-	<li>
-		<div style="float:left; text-align:left">State Key Laboratory of CAD & CG, Zhejiang University, China</div> <div style="float:right; text-align:right">Sep. 2013 – Jun. 2015</div><br>
-		Undergraduate Research Assistant<br>
-		Advisor: Prof. Deng Cai<br>
+		Topic: Topology optimization of differentiable microstructures<br>
 	</li>
 </ul>
 
