--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 	</tr>
 	<tr>&nbsp</tr>
         <tr>&nbsp</tr>
-        <tr>&nbsp</tr>->
+        <tr>&nbsp</tr>-->
 	
 	<tr>
 		<td width="270">
@@ -119,7 +119,7 @@
 		<td> Topology Optimization of Differentiable Microstructures. <br>
 		<p>  </p>
 		<b>Xiaoya Zhai</b>, Weiming Wang, Falai Chen, Jun Wu*. <br>
-		<!--<em> Computer Methods in Applied Mechanics and Engineering, submitted, 2021.</em>->
+		<!--<em> Computer Methods in Applied Mechanics and Engineering, submitted, 2021.</em>-->
 		<p>  </p>
 		<em> Presented in 14th WCSMO, 2021 </em>
 		<p> </p>
@@ -216,13 +216,13 @@
 <h2>Experience</h2>
 <ul>
 	<li>
-		<div style="float:left; text-align:left">Graphics & Geometric Computing Laboratory, School of Mathematical Sciences, University of Science and Technology of China 
+		<div style="float:left; text-align:left">Graphics & Geometric Computing Laboratory, School of Mathematical Sciences, USTC 
 		</div> <div style="float:right; text-align:right">Jul. 2015 – May. 2021</div><br>
 		PhD student<br>
 		Topic: Structural Design and Path Planning in Additive Manufacturing<br>
 	</li>
 	<li>
-		<div style="float:left; text-align:left">Department of Sustainable Design Engineering, Delft University of Technology, Delft, The Netherlands</div>
+		<div style="float:left; text-align:left">Department of Sustainable Design Engineering, TUDelft, The Netherlands</div>
 		<div style="float:right; text-align:right">Sep. 2019 – Mar. 2021</div><br>
 		Research Intern<br>
 		Topic: Topology optimization of differentiable microstructures<br>
