--- a/index.html
+++ b/index.html
@@ -217,6 +217,12 @@
 <ul>
 	<li>
 		<div style="float:left; text-align:left">Graphics & Geometric Computing Laboratory, School of Mathematical Sciences, USTC 
+		</div> <div style="float:right; text-align:right">May. 2021 – Now</div><br>
+		Postdoctoral Fellow<br>
+		Topic: Structural Design and Path Planning in Additive Manufacturing<br>
+	</li>
+	<li>
+		<div style="float:left; text-align:left">Graphics & Geometric Computing Laboratory, School of Mathematical Sciences, USTC 
 		</div> <div style="float:right; text-align:right">Jul. 2015 – May. 2021</div><br>
 		PhD student<br>
 		Topic: Structural Design and Path Planning in Additive Manufacturing<br>
@@ -224,7 +230,7 @@
 	<li>
 		<div style="float:left; text-align:left">Department of Sustainable Design Engineering, TUDelft, The Netherlands</div>
 		<div style="float:right; text-align:right">Sep. 2019 – Mar. 2021</div><br>
-		Research Intern<br>
+		Joint training of doctoral students <br>
 		Topic: Topology optimization of differentiable microstructures<br>
 	</li>
 </ul>
