--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
 <ul>
 	<li>
 		<div style="float:left; text-align:left">Graphics & Geometric Computing Laboratory, School of Mathematical Sciences, USTC 
-		</div> <div style="float:right; text-align:right">May. 2021 – Now</div><br>
-		Postdoctoral Fellow<br>
+		</div> <div style="float:right; text-align:right">May. 2021 – Now</div>
+		<em>Postdoctoral Fellow</em>
 		Topic: Structural Design and Path Planning in Additive Manufacturing<br>
 	</li>
 	<li>
