--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 		<div style="float:left; text-align:left">Graphics & Geometric Computing Laboratory, School of Mathematical Sciences, USTC 
 		</div> <div style="float:right; text-align:right">May. 2021 – Now</div>
 		<em>Postdoctoral Fellow</em>
-		Topic: Structural Design and Path Planning in Additive Manufacturing<br>
+		Topic: Microstructures design<br>
 	</li>
 	<li>
 		<div style="float:left; text-align:left">Graphics & Geometric Computing Laboratory, School of Mathematical Sciences, USTC 
@@ -239,9 +239,9 @@
 <table style="border-spacing:2px">
 	
 		<tbody>
-		<tr><td> National Scholarship in China, 2017/2014</td></tr>
-		<tr><td> Ph. D. Dissertation Excellence Program, 2020</td></tr>
 		<tr><td> Outstanding Graduates of USTC, 2021</td></tr>
+		<tr><td> Ph. D. Dissertation Excellence Program, 2020</td></tr>
+		<tr><td> National Scholarship in China, 2017/2014</td></tr>
     		<tr><td> Meritorious Winner of MCM/ICM, 2014</td></tr>
 	</tbody>
 </table>
