--- a/index.html
+++ b/index.html
@@ -217,20 +217,20 @@
 <ul>
 	<li>
 		<div style="float:left; text-align:left">Graphics & Geometric Computing Laboratory, School of Mathematical Sciences, USTC 
-		</div> <div style="float:right; text-align:right">May. 2021 – Now</div>
-		<em>Postdoctoral Fellow</em>
+		</div> <div style="float:right; text-align:right">May. 2021 – Now</div> </br> 
+		<em>Postdoctoral Fellow</em></br> 
 		Topic: Microstructures design<br>
 	</li>
 	<li>
 		<div style="float:left; text-align:left">Graphics & Geometric Computing Laboratory, School of Mathematical Sciences, USTC 
 		</div> <div style="float:right; text-align:right">Jul. 2015 – May. 2021</div><br>
-		PhD student<br>
+		<em>PhD student</em><br>
 		Topic: Structural Design and Path Planning in Additive Manufacturing<br>
 	</li>
 	<li>
 		<div style="float:left; text-align:left">Department of Sustainable Design Engineering, TUDelft, The Netherlands</div>
 		<div style="float:right; text-align:right">Sep. 2019 – Mar. 2021</div><br>
-		Joint training of doctoral students <br>
+		<em>Joint training of doctoral students</em></br> 
 		Topic: Topology optimization of differentiable microstructures<br>
 	</li>
 </ul>
