--- a/index.html
+++ b/index.html
@@ -216,21 +216,21 @@
 <h2>Experience</h2>
 <ul>
 	<li>
-		<div style="float:left; text-align:left">Graphics & Geometric Computing Laboratory, School of Mathematical Sciences, USTC 
+		<div style="float:left; text-align:left">Graphics & Geometric Computing Laboratory, School of Mathematical Sciences, USTC </br>
 		</div> <div style="float:right; text-align:right">May. 2021 – Now</div> </br> 
-		<em>Postdoctoral Fellow</em></br> </br>
+		<em>Postdoctoral Fellow</em></br> 
 		Topic: Microstructures design<br>
 	</li>
 	<li>
-		<div style="float:left; text-align:left">Graphics & Geometric Computing Laboratory, School of Mathematical Sciences, USTC 
+		<div style="float:left; text-align:left">Graphics & Geometric Computing Laboratory, School of Mathematical Sciences, USTC </br>
 		</div> <div style="float:right; text-align:right">Jul. 2015 – May. 2021</div><br>
-		<em>PhD student</em><br></br>
+		<em>PhD student</em><br>
 		Topic: Structural Design and Path Planning in Additive Manufacturing<br>
 	</li>
 	<li>
-		<div style="float:left; text-align:left">Department of Sustainable Design Engineering, TUDelft, The Netherlands</div>
-		<div style="float:right; text-align:right">Sep. 2019 – Mar. 2021</div><br>
-		<em>Joint training of doctoral students</em></br> </br>
+		<div style="float:left; text-align:left">Department of Sustainable Design Engineering, TUDelft, The Netherlands</br>
+		</div><div style="float:right; text-align:right">Sep. 2019 – Mar. 2021</div><br>
+		<em>Joint training of doctoral students</em></br> 
 		Topic: Topology optimization of differentiable microstructures<br>
 	</li>
 </ul>
